entrega3/src/c_ast_descendente/asint/ConstructorASTTinyDesc.java
/* ConstructorASTTinyDesc.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTTinyDesc.java */
package c_ast_descendente.asint;
import asint.ClaseSemanticaTiny;
import asint.SintaxisAbstractaTiny.ProgT;
import asint.SintaxisAbstractaTiny.Blq;
import asint.SintaxisAbstractaTiny.LOptDecs;
import asint.SintaxisAbstractaTiny.LDecs;
import asint.SintaxisAbstractaTiny.Dec;
import asint.SintaxisAbstractaTiny.LOptParamForm;
import asint.SintaxisAbstractaTiny.LParamForm;
import asint.SintaxisAbstractaTiny.ParamForm;
import asint.SintaxisAbstractaTiny.Tipo;
import asint.SintaxisAbstractaTiny.LParamReg;
import asint.SintaxisAbstractaTiny.ParamReg;
import asint.SintaxisAbstractaTiny.LOptInst;
import asint.SintaxisAbstractaTiny.LInst;
import asint.SintaxisAbstractaTiny.Inst;
import asint.SintaxisAbstractaTiny.Exp;
import asint.SintaxisAbstractaTiny.LOptParam;
import asint.SintaxisAbstractaTiny.LParam;
import c_ast_ascendente.alex.UnidadLexica.StringLocalizado;

public class ConstructorASTTinyDesc implements ConstructorASTTinyDescConstants {
    private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public ProgT analiza() throws ParseException {
    trace_call("analiza");
    try {
ProgT prog;
      prog = programa_tiny();
      jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
}

  final public ProgT programa_tiny() throws ParseException {
    trace_call("programa_tiny");
    try {
Blq blq;
      blq = bloque();
{if ("" != null) return sem.prog_tiny(blq);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa_tiny");
    }
}

  final public Blq bloque() throws ParseException {
    trace_call("bloque");
    try {
LOptDecs l_opt_decs; LOptInst l_opt_inst;
      jj_consume_token(INIBLOQUE);
      l_opt_decs = lista_opt_declaraciones();
      l_opt_inst = lista_opt_instrucciones();
      jj_consume_token(FINBLOQUE);
{if ("" != null) return sem.bloque(l_opt_decs, l_opt_inst);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloque");
    }
}

  final public LOptDecs lista_opt_declaraciones() throws ParseException {
    trace_call("lista_opt_declaraciones");
    try {
LDecs l_decs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case PROC:
      case STRUCT:
      case TYPE:
      case PUNTERO:
      case Identificador:{
        l_decs = lista_declaraciones();
        jj_consume_token(FINDECLARACIONES);
{if ("" != null) return sem.si_lista_opt_decs(l_decs);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.no_lista_opt_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_opt_declaraciones");
    }
}

  final public LDecs lista_declaraciones() throws ParseException {
    trace_call("lista_declaraciones");
    try {
LDecs l_decs; Dec dec;
      dec = declaracion();
      l_decs = lista_decs(sem.una_lista_dec(dec));
{if ("" != null) return l_decs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_declaraciones");
    }
}

  final public LDecs lista_decs(LDecs l_decsh) throws ParseException {
    trace_call("lista_decs");
    try {
Dec dec; LDecs l_decs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUNTOYCOMA:{
        jj_consume_token(PUNTOYCOMA);
        dec = declaracion();
        l_decs = lista_decs(sem.muchas_lista_decs(l_decsh, dec));
{if ("" != null) return l_decs;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return l_decsh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_decs");
    }
}

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
Dec dec;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case PUNTERO:
      case Identificador:{
        dec = declaracion_variable();
{if ("" != null) return dec;}
        break;
        }
      case TYPE:{
        dec = declaracion_tipo();
{if ("" != null) return dec;}
        break;
        }
      case PROC:{
        dec = declaracion_proc();
{if ("" != null) return dec;}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
}

  final public Dec declaracion_variable() throws ParseException {
    trace_call("declaracion_variable");
    try {
Tipo tipo; Token t;
      tipo = tipo();
      t = jj_consume_token(Identificador);
{if ("" != null) return (Dec)sem.dec_var(tipo, t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion_variable");
    }
}

  final public Dec declaracion_tipo() throws ParseException {
    trace_call("declaracion_tipo");
    try {
Tipo tipo; Token t;
      jj_consume_token(TYPE);
      tipo = tipo();
      t = jj_consume_token(Identificador);
{if ("" != null) return (Dec)sem.dec_tipo(tipo, t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion_tipo");
    }
}

  final public Dec declaracion_proc() throws ParseException {
    trace_call("declaracion_proc");
    try {
Token t; LOptParamForm l_opt_param_form; Blq bloque;
      jj_consume_token(PROC);
      t = jj_consume_token(Identificador);
      jj_consume_token(INIPAR);
      l_opt_param_form = lista_opt_parametros_formales();
      jj_consume_token(FINPAR);
      bloque = bloque();
{if ("" != null) return (Dec)sem.dec_proc(t.image, l_opt_param_form, bloque).ponFila(t.beginLine).ponCol(t.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion_proc");
    }
}

  final public LOptParamForm lista_opt_parametros_formales() throws ParseException {
    trace_call("lista_opt_parametros_formales");
    try {
LParamForm l_param_form;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case PUNTERO:
      case Identificador:{
        l_param_form = lista_parametros_formales();
{if ("" != null) return sem.si_lista_opt_param_form(l_param_form);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
{if ("" != null) return sem.no_lista_opt_param_form();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_opt_parametros_formales");
    }
}

  final public LParamForm lista_parametros_formales() throws ParseException {
    trace_call("lista_parametros_formales");
    try {
ParamForm pf; LParamForm l_param_form;
      pf = parametro_formal();
      l_param_form = RECP(sem.una_lista_param_form(pf));
{if ("" != null) return l_param_form;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros_formales");
    }
}

  final public LParamForm RECP(LParamForm l_param_formh) throws ParseException {
    trace_call("RECP");
    try {
ParamForm pf; LParamForm l_param_form;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        jj_consume_token(COMA);
        pf = parametro_formal();
        l_param_form = RECP(sem.muchas_lista_param_form(l_param_formh, pf));
{if ("" != null) return l_param_form;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
{if ("" != null) return l_param_formh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RECP");
    }
}

  final public ParamForm parametro_formal() throws ParseException {
    trace_call("parametro_formal");
    try {
Tipo tipo; ParamForm pf;
      tipo = tipo();
      pf = RECpf(tipo);
{if ("" != null) return pf;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametro_formal");
    }
}

  final public ParamForm RECpf(Tipo th) throws ParseException {
    trace_call("RECpf");
    try {
Token t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REFERENCIA:{
        jj_consume_token(REFERENCIA);
        t = jj_consume_token(Identificador);
{if ("" != null) return (ParamForm) sem.param_form_ref(th, t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case Identificador:{
        t = jj_consume_token(Identificador);
{if ("" != null) return (ParamForm) sem.param_form(th, t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RECpf");
    }
}

  final public Tipo tipo() throws ParseException {
    trace_call("tipo");
    try {
Tipo tipo;
      tipo = tipo_array();
{if ("" != null) return tipo;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo");
    }
}

  final public Tipo tipo_array() throws ParseException {
    trace_call("tipo_array");
    try {
Tipo tipo1, tipo2;
      tipo1 = tipo_puntero();
      tipo2 = RETA(tipo1);
{if ("" != null) return tipo2;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo_array");
    }
}

  final public Tipo RETA(Tipo tipoh) throws ParseException {
    trace_call("RETA");
    try {
Token t; Tipo tipo;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INIARRAY:{
        jj_consume_token(INIARRAY);
        t = jj_consume_token(Entero);
        jj_consume_token(FINARRAY);
        tipo = RETA((Tipo) sem.tipo_array(tipoh, t.image).ponFila(t.beginLine).ponCol(t.beginColumn));
{if ("" != null) return (Tipo) tipo;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return tipoh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RETA");
    }
}

  final public Tipo tipo_puntero() throws ParseException {
    trace_call("tipo_puntero");
    try {
Tipo tipo;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUNTERO:{
        jj_consume_token(PUNTERO);
        tipo = tipo_puntero();
{if ("" != null) return sem.tipo_puntero(tipo);}
        break;
        }
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case Identificador:{
        tipo = T2();
{if ("" != null) return tipo;}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo_puntero");
    }
}

  final public Tipo T2() throws ParseException {
    trace_call("T2");
    try {
Tipo tipo;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:{
        tipo = tipo_basico();
{if ("" != null) return tipo;}
        break;
        }
      case STRUCT:{
        tipo = tipo_registro();
{if ("" != null) return tipo;}
        break;
        }
      case Identificador:{
        tipo = tipo_definido();
{if ("" != null) return tipo;}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("T2");
    }
}

  final public Tipo tipo_basico() throws ParseException {
    trace_call("tipo_basico");
    try {
